--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<script src='jquery-1.7.1.min.js'></script>
 		<script src='mScriptClass.js'></script>
 		<script src='mainScript.js'></script>
-		<script src="http://www.html5canvastutorials.com/libraries/kinetic-v3.9.6.js"></script></div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/kineticjs/4.3.1/kinetic.min.js"></script></div>
 
 </body>
 </html>
